# GameBooster

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  app.manifest  app.rc  build.rs  libdefender_advanced.rlib  requirements.txt
.cargo/: config.toml
src/: main.rs  os_info.rs  theme.rs  utils.rs
src/disk/: browser_cache.rs  mod.rs  temp_files.rs  thumbnails.rs
src/memory/: mod.rs
src/network/: mod.rs  process_monitor.rs  windivert_wrapper.rs
src/scheduler/: config.rs  mod.rs  task.rs
src/services/: defender.rs  gaming_services.rs  mod.rs  powershell_runner.rs  winapi_defender.rs  winapi_service_manager.rs
src/ui/: disk_ui.rs  memory_ui.rs  mod.rs  network_ui.rs  scheduler_ui.rs  services_ui.rs  settings_ui.rs  util.rs
src/ui/app/: mod.rs  mod_backup.rs  mod_clean.rs  services_ui.rs  services_ui_backup.rs
src/ui/icons/: mod.rs
src/ui/tabs/: mod.rs  services.rs
src/utils/: mod.rs
