[package]
name = "gamebooster"
version = "1.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A comprehensive PC optimization and cleaning utility for gaming"

[dependencies]
eframe = "0.26.0"
egui = "0.26.0"
sysinfo = "0.30.5"
anyhow = "1.0.79"
chrono = "0.4.34"
image = "0.24.9"
is_elevated = "0.1.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
poll-promise = "0.3.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.4.0"
winapi = { version = "0.3.9", features = ["winbase", "processthreadsapi", "psapi", "sysinfoapi", "winuser"] }
windows = { version = "0.52.0", features = [
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Foundation"
] }
windows-core = "0.52.0"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "gamebooster.exe"
LegalCopyright = "© 2024"
FileDescription = "GameBooster - PC Optimizer for Gaming"
ProductName = "GameBooster"
ProductVersion = "1.1.0"